--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: android
 jdk: oraclejdk8
 
 env:
- global:
- - ANDROID_API=28
+  global:
+    - ANDROID_API=28
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -17,20 +17,22 @@ cache:
 
 android:
   components:
-    - platform-tools
     - tools
+    - tools
+    - platform-tools
+    - build-tools-27.0.3
     - android-$ANDROID_API
     - extra-android-support
     - extra-android-m2repository
     - extra-google-m2repository
-    - sys-img-armeabi-v7a-addon-google_apis-google-ANDROID_API
+    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API
 
 branches:
   only:
     - master
 
 before_script:
-  - echo no | android create avd --force -n test -t android-$ANDROID_API --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-22--abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
