--- a/.travis.yml
+++ b/.travis.yml
@@ -31,11 +31,11 @@ branches:
   only:
     - master
 
-before_script:
-  - echo no | android create avd --force -n test -t android-22--abi armeabi-v7a
-  - emulator -avd test -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+#before_script:
+#  - echo no | android create avd --force -n test -t android-22--abi armeabi-v7a
+#  - emulator -avd test -no-audio -no-window &
+#  - android-wait-for-emulator
+#  - adb shell input keyevent 82 &
 
 script:
   - "./gradlew clean build connectedCheck -PdisablePreDex --stacktrace"
