--- a/.travis.yml
+++ b/.travis.yml
@@ -37,5 +37,5 @@ branches:
 #  - android-wait-for-emulator
 #  - adb shell input keyevent 82 &
 
-script:
-  - "./gradlew clean build connectedCheck -PdisablePreDex --stacktrace"
+#script:
+#  - "./gradlew clean build connectedCheck -PdisablePreDex --stacktrace"
