--- a/.travis.yml
+++ b/.travis.yml
@@ -20,12 +20,11 @@ android:
     - tools
     - tools
     - platform-tools
-    - build-tools-27.0.3
     - android-$ANDROID_API
     - extra-android-support
     - extra-android-m2repository
     - extra-google-m2repository
-    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API
+    #- sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API
 
 branches:
   only:
@@ -37,5 +36,5 @@ branches:
 #  - android-wait-for-emulator
 #  - adb shell input keyevent 82 &
 
-#script:
-#  - "./gradlew clean build connectedCheck -PdisablePreDex --stacktrace"
+script:
+  - "./gradlew clean assembleDebug"
