--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,27 @@
 language: android
+sudo: required
 jdk: oraclejdk8
 
 env:
   global:
     - ANDROID_API=28
 
-before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+#before_cache:
+#  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+#  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
-    - $HOME/.android/build-cache
+#cache:
+#  directories:
+#    - $HOME/.gradle/caches/
+#    - $HOME/.gradle/wrapper/
+#    - $HOME/.android/build-cache
 
 android:
   components:
     - tools
     - tools
     - build-tools-27.0.3
-    - android-27
+    - android-$ANDROID_API
     #- sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API
 
 branches:
@@ -34,7 +35,7 @@ branches:
 #  - adb shell input keyevent 82 &
 
 before_install:
-  - yes | sdkmanager "platforms;android-27"
+  - yes | sdkmanager "platforms;android-28"
 
 script:
   - ./gradlew build connectedCheck
