--- a/.travis.yml
+++ b/.travis.yml
@@ -38,4 +38,4 @@ before_install:
   - yes | sdkmanager "platforms;android-28"
 
 script:
-  - ./gradlew build connectedCheck
+  - ./gradlew build assembleDebug
