--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,15 @@ env:
   global:
     - ANDROID_API=28
 
-#before_cache:
-#  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-#  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 
-#cache:
-#  directories:
-#    - $HOME/.gradle/caches/
-#    - $HOME/.gradle/wrapper/
-#    - $HOME/.android/build-cache
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
 
 android:
   components:
@@ -38,4 +38,4 @@ before_install:
   - yes | sdkmanager "platforms;android-$ANDROID_API"
 
 script:
-  - ./gradlew build assembleTravis
+  - ./gradlew clean assembleTravis
