--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ android {
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation Libs.kotlin
+  implementation project (Modules.wordlistApi)
+  implementation project (Modules.wordlistImpl)
 
   implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
   implementation 'com.android.support.constraint:constraint-layout:1.1.3'
