--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,8 +60,8 @@ dependencies {
   implementation project (Modules.wordlistApi)
   implementation project (Modules.wordlistImpl)
 
-  implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
-  implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+  implementation Libs.Androidx.appcompat
+
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
