--- a/core/core-utils/build.gradle
+++ b/core/core-utils/build.gradle
@@ -30,6 +30,8 @@ dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
 
   implementation Libs.kotlin
+  implementation Libs.Androidx.appcompat
+  implementation Libs.material
 
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
