Add SonarCloud for Travis CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,3 +40,8 @@ before_install:
 script:
   - ./gradlew clean assembleTravis --stacktrace
   - ./gradlew test
+  - sonar-scanner
+
+addons:
+  sonarcloud:
+    organization: "alexeypanchenko-github"
