--- a/.travis.yml
+++ b/.travis.yml
@@ -45,4 +45,5 @@ script:
 addons:
   sonarcloud:
     organization: "alexeypanchenko-github"
-    token: $SONAR_TOKEN
+    token:
+      secure: ${SONAR_TOKEN}
