--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,11 @@ sonar.pullrequest.branch=feature/wordlist
 sonar.pullrequest.key=1
 sonar.pullrequest.provider=GitHub
 sonar.pullrequest.github.repository=AlexeyPanchenko/wordcards
+
+# Required metadata
+sonar.projectKey=wordcards
+sonar.projectName=wordcards
+sonar.projectVersion=VERSION_NAME
+
+# Encoding of the source files
+sonar.sourceEncoding=UTF-8
