--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,6 @@ sonar.pullrequest.github.repository=AlexeyPanchenko/wordcards
 sonar.projectKey=wordcards
 sonar.projectName=wordcards
 sonar.projectVersion=VERSION_NAME
-
+sonar.sources=.
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
