--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,5 @@
-sonar.pullrequest.base=master
-sonar.pullrequest.branch=feature/wordlist
-sonar.pullrequest.key=1
-sonar.pullrequest.provider=GitHub
-sonar.pullrequest.github.repository=AlexeyPanchenko/wordcards
-
 # Required metadata
-sonar.projectKey=wordcards
+sonar.projectKey=ru.alexeypan.wordcards
 sonar.projectName=wordcards
 sonar.projectVersion=VERSION_NAME
 sonar.sources=.
