Add binaries property

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,6 @@ sonar.projectKey=ru.alexeypan.wordcards
 sonar.projectName=wordcards
 sonar.projectVersion=VERSION_NAME
 sonar.sources=.
+sonar.java.binaries=.
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
