Move dependencies into dependencies.gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,13 @@
-import ru.alexeypan.wordcards.*
-
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-  compileSdkVersion Versions.compileSdk
+  compileSdkVersion versions.compileSdk
   defaultConfig {
-    applicationId ApplicationId.id
-    minSdkVersion Versions.minSdk
-    targetSdkVersion Versions.targetSdk
+    applicationId APPLICATION_ID
+    minSdkVersion versions.minSdk
+    targetSdkVersion versions.targetSdk
     versionCode=VERSION_CODE
     versionName=VERSION_NAME
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -56,14 +54,13 @@ android {
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
-  implementation Libs.kotlin
-  implementation project (Modules.wordlistApi)
-  implementation project (Modules.wordlistImpl)
-  implementation project(Modules.coreUtils)
+  implementation deps.kotlin.lib8
+  implementation project (deps.modules.wordlistApi)
+  implementation project (deps.modules.wordlistImpl)
+  implementation project(deps.modules.coreUtils)
 
-  implementation Libs.Androidx.appcompat
+  implementation deps.androidx.appcompat
 
-  testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'com.android.support.test:runner:1.0.2'
-  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+  testImplementation deps.test.junit
+  androidTestImplementation depsPack.androidTest
 }
