--- a/features/features-categories-api/build.gradle
+++ b/features/features-categories-api/build.gradle
@@ -1,6 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
   compileSdkVersion versions.compileSdk
@@ -25,8 +23,8 @@ android {
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-  implementation deps.kotlin.lib8
-
-  testImplementation deps.test.junit
-  androidTestImplementation depsPack.androidTest
+  implementation deps.androidx.appcompat
+  testImplementation 'junit:junit:4.12'
+  androidTestImplementation 'com.android.support.test:runner:1.0.2'
+  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
