--- a/features/features-categories-impl/src/main/AndroidManifest.xml
+++ b/features/features-categories-impl/src/main/AndroidManifest.xml
@@ -1,1 +1,13 @@
-<manifest package="ru.alexeypan.wordcards.categories.impl" />
+<manifest
+  package="ru.alexeypan.wordcards.categories.impl"
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  >
+  <application>
+    <activity android:name=".CategoriesActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+  </application>
+</manifest>
