--- a/injector/build.gradle
+++ b/injector/build.gradle
@@ -25,9 +25,7 @@ android {
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-  implementation deps.kotlin.lib8
-  implementation deps.androidx.appcompat
+  implementation project(deps.modules.wordlistApi)
 
-  testImplementation deps.test.junit
-  androidTestImplementation depsPack.androidTest
+  implementation deps.kotlin.lib8
 }
