--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,10 +73,10 @@ dependencies {
   implementation deps.kotlin.lib8
   implementation project(deps.modules.categoriesApi)
   implementation project(deps.modules.categoriesImpl)
-  implementation project(deps.modules.wordlistImpl)
   implementation project(deps.modules.wordlistApi)
   implementation project(deps.modules.wordlistImpl)
   implementation project(deps.modules.coreUtils)
+  implementation project(deps.modules.injector)
 
   implementation deps.androidx.appcompat
 
