--- a/features/features-wordlist-impl/src/main/AndroidManifest.xml
+++ b/features/features-wordlist-impl/src/main/AndroidManifest.xml
@@ -1,3 +1,8 @@
-<manifest package="ru.alexeypan.wordcards.wordlist.impl">
-
+<manifest
+  package="ru.alexeypan.wordcards.wordlist.impl"
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  >
+  <application>
+    <activity android:name=".WordListActivity"/>
+  </application>
 </manifest>
