--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':app', ':buildSrc'
+include ':app', ':buildSrc', ':injector'
 
 include ':features-wordlist-api'
 project(':features-wordlist-api').projectDir = new File(rootDir, 'features/features-wordlist-api')
