Rename core-utils to core-ui. Replace module to Scope. Add Fab behaviour for category screen

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -30,7 +30,7 @@ ext.deps = [
     'wordlistImpl'        : ":features-wordlist-impl",
     'categoriesApi'       : ":features-categories-api",
     'categoriesImpl'      : ":features-categories-impl",
-    'coreUtils'           : ":core-utils",
+    'coreUI'              : ":core-ui",
     'injector'            : ":injector",
   ],
   test: [
