--- a/features/features-wordlist-impl/build.gradle
+++ b/features/features-wordlist-impl/build.gradle
@@ -21,13 +21,12 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
-
 }
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-  implementation project(deps.modules.coreUtils)
+  implementation project(deps.modules.coreUI)
   implementation project(deps.modules.wordlistApi)
 
   implementation deps.kotlin.lib8
