--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,7 @@ dependencies {
   implementation project(deps.modules.categoriesImpl)
   implementation project(deps.modules.wordlistApi)
   implementation project(deps.modules.wordlistImpl)
-  implementation project(deps.modules.coreUtils)
+  implementation project(deps.modules.coreUI)
   implementation project(deps.modules.injector)
 
   implementation deps.androidx.appcompat
