--- a/features/features-categories-impl/build.gradle
+++ b/features/features-categories-impl/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 
   implementation project(deps.modules.categoriesApi)
   implementation project(deps.modules.wordlistApi)
-  implementation project(deps.modules.coreUtils)
+  implementation project(deps.modules.coreUI)
   implementation project(deps.modules.injector)
 
   implementation deps.kotlin.lib8
