--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -8,6 +8,7 @@ ext.versions = [
   'kotlin'                : '1.2.71',
 
   'androidx'              : '1.0.0',
+  'room'                  : '2.1.0-alpha02',
   'constraintLayout'      : '1.1.3',
   'junit'                 : '4.12',
 ]
@@ -18,6 +19,8 @@ ext.deps = [
     'annotations'         : "androidx.annotation:annotation:$versions.androidx",
     'appcompat'           : "androidx.appcompat:appcompat:$versions.androidx",
     'recyclerView'        : "androidx.recyclerview:recyclerview:$versions.androidx",
+    'room'                : "androidx.room:room-runtime:$versions.room",
+    'roomProcessor'       : "androidx.room:room-compiler:$versions.room",
     'constraintLayout'    : "androidx.constraintlayout:constraintlayout:$versions.constraintLayout",
   ],
   'androidMaterial'       : "com.google.android.material:material:$versions.androidx",
