--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -8,7 +8,7 @@ ext.versions = [
   'kotlin'                : '1.2.71',
 
   'androidx'              : '1.0.0',
-  'room'                  : '2.1.0-alpha02',
+  'room'                  : '2.0.0',
   'constraintLayout'      : '1.1.3',
   'junit'                 : '4.12',
 ]
@@ -19,9 +19,11 @@ ext.deps = [
     'annotations'         : "androidx.annotation:annotation:$versions.androidx",
     'appcompat'           : "androidx.appcompat:appcompat:$versions.androidx",
     'recyclerView'        : "androidx.recyclerview:recyclerview:$versions.androidx",
-    'room'                : "androidx.room:room-runtime:$versions.room",
-    'roomProcessor'       : "androidx.room:room-compiler:$versions.room",
     'constraintLayout'    : "androidx.constraintlayout:constraintlayout:$versions.constraintLayout",
+    'room': [
+      'lib'               : "androidx.room:room-runtime:$versions.room",
+      'processor'         : "androidx.room:room-compiler:$versions.room",
+    ]
   ],
   'androidMaterial'       : "com.google.android.material:material:$versions.androidx",
   'kotlin': [
