--- a/features/features-categories-impl/build.gradle
+++ b/features/features-categories-impl/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
   compileSdkVersion versions.compileSdk
@@ -36,6 +37,9 @@ dependencies {
   implementation deps.androidx.recyclerView
   implementation deps.androidx.constraintLayout
   implementation deps.androidMaterial
+
+  implementation deps.androidx.room.lib
+  kapt deps.androidx.room.processor
 
   testImplementation deps.test.junit
   androidTestImplementation depsPack.androidTest
