--- a/core/core-db/build.gradle
+++ b/core/core-db/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
   compileSdkVersion versions.compileSdk
@@ -25,20 +26,10 @@ android {
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-  implementation project(deps.modules.categoriesApi)
-  implementation project(deps.modules.wordlistApi)
-  implementation project(deps.modules.coreUI)
-  implementation project(deps.modules.coreDB)
-  implementation project(deps.modules.injector)
-
   implementation deps.kotlin.lib8
-  implementation deps.androidx.annotations
-  implementation deps.androidx.appcompat
-  implementation deps.androidx.recyclerView
-  implementation deps.androidx.constraintLayout
-  implementation deps.androidMaterial
 
   implementation deps.androidx.room.lib
+  kapt deps.androidx.room.processor
 
   testImplementation deps.test.junit
   androidTestImplementation depsPack.androidTest
