Add core-db, separate database work to feature-db modules.

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -32,10 +32,13 @@ ext.deps = [
   ],
   'modules': [
     'wordlistApi'         : ":features-wordlist-api",
+    'wordlistDB'         : ":features-wordlist-db",
     'wordlistImpl'        : ":features-wordlist-impl",
     'categoriesApi'       : ":features-categories-api",
+    'categoriesDB'        : ":features-categories-db",
     'categoriesImpl'      : ":features-categories-impl",
     'coreUI'              : ":core-ui",
+    'coreDB'              : ":core-db",
     'injector'            : ":injector",
   ],
   test: [
