--- a/injector/build.gradle
+++ b/injector/build.gradle
@@ -26,6 +26,9 @@ dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
 
   implementation project(deps.modules.wordlistApi)
+  implementation project(deps.modules.categoriesDB)
+  implementation project(deps.modules.wordlistDB)
+  implementation project(deps.modules.coreDB)
 
   implementation deps.kotlin.lib8
 }
