Rename features modules.

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -31,12 +31,12 @@ ext.deps = [
     'lib8'                : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}",
   ],
   'modules': [
-    'wordlistApi'         : ":features-wordlist-api",
-    'wordlistDB'         : ":features-wordlist-db",
-    'wordlistImpl'        : ":features-wordlist-impl",
-    'categoriesApi'       : ":features-categories-api",
-    'categoriesDB'        : ":features-categories-db",
-    'categoriesImpl'      : ":features-categories-impl",
+    'wordlistApi'         : ":wordlist-api",
+    'wordlistDB'          : ":wordlist-db",
+    'wordlistImpl'        : ":wordlist-impl",
+    'categoriesApi'       : ":categories-api",
+    'categoriesDB'        : ":categories-db",
+    'categoriesImpl'      : ":categories-impl",
     'coreUI'              : ":core-ui",
     'coreDB'              : ":core-db",
     'injector'            : ":injector",
