--- a/features/categories-api/build.gradle
+++ b/features/categories-api/build.gradle
@@ -24,7 +24,7 @@ dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
 
   implementation deps.androidx.appcompat
-  testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'com.android.support.test:runner:1.0.2'
-  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+  testImplementation deps.test.junit
+  androidTestImplementation depsPack.androidTest
 }
