--- a/features/categories-impl/src/main/AndroidManifest.xml
+++ b/features/categories-impl/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   >
   <application>
-    <activity android:name=".CategoriesActivity">
+    <activity android:name=".list.CategoriesActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
