Fix Injector logic, take out it to java module.

--- a/features/wordlist-api/build.gradle
+++ b/features/wordlist-api/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 
   implementation deps.kotlin.lib8
   implementation deps.androidx.appcompat
+  implementation project(deps.modules.injector)
 
   testImplementation deps.test.junit
   androidTestImplementation depsPack.androidTest
