--- a/core/core-db/build.gradle
+++ b/core/core-db/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
   implementation project(deps.modules.categoriesDB)
   implementation project(deps.modules.wordlistDB)
+  implementation project(deps.modules.injector)
   implementation deps.kotlin.lib8
 
   implementation deps.androidx.room.lib
