--- a/injector/build.gradle
+++ b/injector/build.gradle
@@ -1,34 +1,21 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'java-library'
+apply plugin: 'kotlin'
 
-android {
-  compileSdkVersion versions.compileSdk
-
-  defaultConfig {
-    minSdkVersion versions.minSdk
-    targetSdkVersion versions.targetSdk
-    versionCode=VERSION_CODE
-    versionName=VERSION_NAME
-
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-  }
-
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-    }
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
+repositories {
+  mavenCentral()
+}
+dependencies {
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+}
+compileKotlin {
+  kotlinOptions {
+    jvmTarget = "1.8"
   }
 }
-
-dependencies {
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-  implementation project(deps.modules.wordlistApi)
-  implementation project(deps.modules.categoriesDB)
-  implementation project(deps.modules.wordlistDB)
-  implementation project(deps.modules.coreDB)
-
-  implementation deps.kotlin.lib8
+compileTestKotlin {
+  kotlinOptions {
+    jvmTarget = "1.8"
+  }
 }
