--- a/core/core-ui/build.gradle
+++ b/core/core-ui/build.gradle
@@ -21,6 +21,10 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
 
 }
 
@@ -30,6 +34,7 @@ dependencies {
   implementation deps.kotlin.lib8
   implementation deps.androidx.appcompat
   implementation deps.androidMaterial
+  implementation deps.androidx.lifecycle.commonj8
 
   testImplementation deps.test.junit
   androidTestImplementation depsPack.androidTest
