--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -8,6 +8,7 @@ ext.versions = [
   'kotlin'                : '1.3.11',
 
   'androidx'              : '1.0.0',
+  'lifecycle'             : '2.0.0',
   'room'                  : '2.0.0',
   'constraintLayout'      : '1.1.3',
   'junit'                 : '4.12',
@@ -20,6 +21,9 @@ ext.deps = [
     'appcompat'           : "androidx.appcompat:appcompat:$versions.androidx",
     'recyclerView'        : "androidx.recyclerview:recyclerview:$versions.androidx",
     'constraintLayout'    : "androidx.constraintlayout:constraintlayout:$versions.constraintLayout",
+    'lifecycle': [
+      'commonj8'          : "androidx.lifecycle:lifecycle-common-java8:$versions.lifecycle",
+    ],
     'room': [
       'lib'               : "androidx.room:room-runtime:$versions.room",
       'processor'         : "androidx.room:room-compiler:$versions.room",
