--- a/features/categories-impl/src/main/AndroidManifest.xml
+++ b/features/categories-impl/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
-<manifest
-  package="ru.alexeypan.wordcards.categories.impl"
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+  package="ru.alexeypan.wordcards.categories.impl">
+
   <application>
     <activity android:name=".list.CategoriesActivity">
       <intent-filter>
