--- a/features/categories-impl/build.gradle
+++ b/features/categories-impl/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'org.jetbrains.kotlin.android.extensions'
 
 android {
   compileSdkVersion versions.compileSdk
@@ -18,6 +19,11 @@ android {
     release {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    }
+  }
+  android {
+    androidExtensions {
+      experimental = true
     }
   }
 }
