Add rx dependencies

--- a/features/categories-impl/build.gradle
+++ b/features/categories-impl/build.gradle
@@ -45,6 +45,8 @@ dependencies {
   implementation deps.androidx.constraintLayout
   implementation deps.androidMaterial
 
+  implementation depsPack.rx
+
   testImplementation deps.test.junit
   androidTestImplementation depsPack.androidTest
 }
