--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,6 +7,9 @@ ext.versions = [
   'androidPlugin'         : '3.3.0',
   'kotlin'                : '1.3.11',
 
+  'rxJava'                : '2.2.6',
+  'rxAndroid'             : '2.1.0',
+
   'androidx'              : '1.0.0',
   'lifecycle'             : '2.0.0',
   'room'                  : '2.0.0',
@@ -34,6 +37,10 @@ ext.deps = [
     'plugin'              : "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}",
     'lib8'                : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}",
   ],
+  'rx': [
+    'rxJava'              : "io.reactivex.rxjava2:rxjava:${versions.rxJava}",
+    'rxAndroid'           : "io.reactivex.rxjava2:rxandroid:${versions.rxAndroid}"
+  ],
   'modules': [
     'wordlistApi'         : ":wordlist-api",
     'wordlistDB'          : ":wordlist-db",
@@ -59,9 +66,13 @@ ext.depsPack = [
     ext.deps.androidx.recyclerView,
     ext.deps.androidx.constraintLayout,
   ],
+  rx: [
+    ext.deps.rx.rxJava,
+    ext.deps.rx.rxAndroid
+  ],
   androidTest: [
     deps.test.runner,
     deps.test.espresso,
-  ],
+  ]
 ]
 
