--- a/features/categories-impl/build.gradle
+++ b/features/categories-impl/build.gradle
@@ -46,6 +46,7 @@ dependencies {
   implementation deps.androidMaterial
 
   implementation depsPack.rx
+  implementation depsPack.coroutines
 
   testImplementation deps.test.junit
   androidTestImplementation depsPack.androidTest
