Replace rxJava to coroutines.

--- a/core/core-ui/build.gradle
+++ b/core/core-ui/build.gradle
@@ -35,6 +35,8 @@ dependencies {
   implementation deps.androidx.appcompat
   implementation deps.androidMaterial
 
+  implementation depsPack.coroutines
+
   testImplementation deps.test.junit
   androidTestImplementation depsPack.androidTest
 }
