Extract WordListPresenter with survive scope.

--- a/features/wordlist-impl/build.gradle
+++ b/features/wordlist-impl/build.gradle
@@ -39,6 +39,8 @@ dependencies {
   implementation deps.androidx.constraintLayout
   implementation deps.androidMaterial
 
+  implementation depsPack.coroutines
+
   testImplementation deps.test.junit
   androidTestImplementation depsPack.androidTest
 }
