--- a/features/wordlist-impl/src/main/AndroidManifest.xml
+++ b/features/wordlist-impl/src/main/AndroidManifest.xml
@@ -3,6 +3,6 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   >
   <application>
-    <activity android:name=".WordListActivity"/>
+    <activity android:name=".ui.WordListActivity"/>
   </application>
 </manifest>
