--- a/features/wordlist-impl/build.gradle
+++ b/features/wordlist-impl/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
   implementation project(deps.modules.wordlistApi)
   implementation project(deps.modules.wordlistDB)
+  implementation project(deps.modules.categoriesDB)
   implementation project(deps.modules.coreUI)
   implementation project(deps.modules.coreDB)
   implementation project(deps.modules.injector)
