--- a/core/core-db/build.gradle
+++ b/core/core-db/build.gradle
@@ -1,37 +1,11 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply from: rootProject.file('features.gradle')
 apply plugin: 'kotlin-kapt'
-
-android {
-  compileSdkVersion versions.compileSdk
-
-  defaultConfig {
-    minSdkVersion versions.minSdk
-    targetSdkVersion versions.targetSdk
-    versionCode=VERSION_CODE
-    versionName=VERSION_NAME
-
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-  }
-
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-    }
-  }
-}
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
 
   implementation project(deps.modules.injector)
-  implementation deps.kotlin.lib8
 
   implementation deps.androidx.room.lib
   kapt deps.androidx.room.processor
-
-  testImplementation deps.test.junit
-  androidTestImplementation depsPack.androidTest
 }
