--- a/core/core-ui/build.gradle
+++ b/core/core-ui/build.gradle
@@ -1,42 +1,11 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
+apply from: rootProject.file('features.gradle')
 apply plugin: 'kotlin-android-extensions'
-
-android {
-  compileSdkVersion versions.compileSdk
-
-  defaultConfig {
-    minSdkVersion versions.minSdk
-    targetSdkVersion versions.targetSdk
-    versionCode=VERSION_CODE
-    versionName=VERSION_NAME
-
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
-  }
-
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-    }
-  }
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
-  }
-
-}
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-  implementation deps.kotlin.lib8
   implementation deps.androidx.appcompat
   implementation deps.androidMaterial
 
   implementation depsPack.coroutines
-
-  testImplementation deps.test.junit
-  androidTestImplementation depsPack.androidTest
 }
