--- a/features/words/build.gradle
+++ b/features/words/build.gradle
@@ -1,27 +1,7 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
+apply from: rootProject.file('features.gradle')
 apply plugin: 'kotlin-android-extensions'
 
-android {
-  compileSdkVersion versions.compileSdk
-
-  defaultConfig {
-    minSdkVersion versions.minSdk
-    targetSdkVersion versions.targetSdk
-    versionCode=VERSION_CODE
-    versionName=VERSION_NAME
-
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
-  }
-
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-    }
-  }
-}
+android.resourcePrefix 'words_'
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -29,7 +9,6 @@ dependencies {
   implementation project(deps.modules.coreUI)
   implementation project(deps.modules.injector)
 
-  implementation deps.kotlin.lib8
   implementation deps.androidx.annotations
   implementation deps.androidx.appcompat
   implementation deps.androidx.recyclerView
@@ -37,7 +16,4 @@ dependencies {
   implementation deps.androidMaterial
 
   implementation depsPack.coroutines
-
-  testImplementation deps.test.junit
-  androidTestImplementation depsPack.androidTest
 }
