--- a/features/categories/build.gradle
+++ b/features/categories/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 
   implementation deps.androidx.annotations
   implementation deps.androidx.appcompat
+  implementation deps.androidx.lifecycle.commonj8
   implementation deps.androidx.recyclerView
   implementation deps.androidx.constraintLayout
   implementation deps.androidMaterial
