add words edit fragment

--- a/features/words/src/main/AndroidManifest.xml
+++ b/features/words/src/main/AndroidManifest.xml
@@ -8,5 +8,9 @@
       android:name="ru.alexeypan.wordcards.words.ui.WordListActivity"
       android:screenOrientation="${screenOrientation}"
       />
+    <activity
+      android:name=".WordsActivity"
+      android:screenOrientation="${screenOrientation}"
+      />
   </application>
 </manifest>
