--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -10,7 +10,9 @@ ext.versions = [
   'coroutines'            : '1.1.1',
   'coroutinesAndroid'     : '1.1.1',
 
-  'androidx'              : '1.0.0',
+  'androidx'              : '1.1.0',
+  'material'              : '1.0.0',
+  'recycler'              : '1.0.0',
   'lifecycle'             : '2.0.0',
   'room'                  : '2.0.0',
   'constraintLayout'      : '1.1.3',
@@ -22,7 +24,7 @@ ext.deps = [
   'androidx': [
     'annotations'         : "androidx.annotation:annotation:$versions.androidx",
     'appcompat'           : "androidx.appcompat:appcompat:$versions.androidx",
-    'recyclerView'        : "androidx.recyclerview:recyclerview:$versions.androidx",
+    'recyclerView'        : "androidx.recyclerview:recyclerview:$versions.recycler",
     'constraintLayout'    : "androidx.constraintlayout:constraintlayout:$versions.constraintLayout",
     'lifecycle': [
       'commonj8'          : "androidx.lifecycle:lifecycle-common-java8:$versions.lifecycle",
@@ -32,7 +34,7 @@ ext.deps = [
       'processor'         : "androidx.room:room-compiler:$versions.room",
     ]
   ],
-  'androidMaterial'       : "com.google.android.material:material:$versions.androidx",
+  'androidMaterial'       : "com.google.android.material:material:$versions.material",
   'kotlin': [
     'plugin'              : "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}",
     'lib8'                : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}",
