--- a/.travis.yml
+++ b/.travis.yml
@@ -34,8 +34,8 @@ branches:
 #  - android-wait-for-emulator
 #  - adb shell input keyevent 82 &
 
-before_install:
-  - yes | sdkmanager "platforms;android-$ANDROID_API"
+#before_install:
+#  - yes | sdkmanager "platforms;android-$ANDROID_API"
 
 script:
   - sonar-scanner
