--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk: oraclejdk8
 
 env:
   global:
-    - ANDROID_API=28
+    - ANDROID_API=29
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -19,7 +19,7 @@ cache:
 android:
   components:
     - tools
-#    - build-tools-28.0.3
+    - build-tools-29.0.0
     - android-$ANDROID_API
     #- sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API
 
